edited openapi file for to include authentication cookies and started configuring other endpoints
